upgrade jdk and gradle, refactor